enrollment updated